@@ -1,9 +1,9 @@
 [bpan]
-api-version = 1
+version = 0.1.80
 
 [package]
 name = getopt-bash
-version = 0.1.18
+version = 0.1.19
 title = Declarative getopt (long) parser
 license = MIT
 copyright = 2020-2022
