@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "STDIN 1"
-.TH "getopt" 3 "2022-10-26" "md2man v0.1.0" "Declarative getopt (long) parser"
+.TH "getopt" 3 "2022-11-18" "md2man v0.1.0" "Declarative getopt (long) parser"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
