@@ -12,9 +12,10 @@
 
 source "$BPAN_ROOT/lib/bpan.bash" --
 
-bpan:source bashplus --
-bpan:source test-tap
+bpan:source bashplus +cmd +sys
+bpan:source test-tap --
 
+export BPAN_TEST_RUNNING=1
 export PATH=$PWD/lib:$PATH
 
 # Add any custom initialization to a test/init-local file.
