@@ -1,3 +1,7 @@
+[version "0.1.19"]
+date = Thu Nov 17 10:17:21 PM PST 2022
+done = Update config to new format
+
 [version "0.1.18"]
 date = Wed Oct 26 06:47:30 AM PDT 2022
 done = Revert "Make tests pass in Bash versions 3.2 - 5.2"
